コンパイル設定が誤っていたのを修正

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./",
+    "rootDir": "./source",
     "baseUrl": "./",
     "module": "commonjs",
     "target": "es6",
