--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/command-line-args": "^5.2.0",
     "@types/dot": "^1.1.5",
     "@types/glob": "^7.2.0",
+    "@types/parsimmon": "^1.10.9",
     "@types/sass": "^1.43.1",
     "@types/webpack": "^5.28.0",
     "@types/webpack-node-externals": "^2.5.3",
